--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ nav{
 
 .bottomnav{
     visibility: collapse;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     width: 100%;
     height: 52px;
@@ -42,7 +42,7 @@ nav{
     background-color: white;
     display: flex;
     overflow-x: auto;
-    z-index: 10;
+    z-index: 10000;
     align-items: center;
     justify-content: center;
 }
